[package]
name = "pots-rust"
version = "0.1.0"
authors = ["Joshua Gabrel <jgabrel94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pots"
path = "src/lib.rs"

[[bin]]
name = "pots_game"
path = "src/main.rs"


[dependencies]
rand = "0.7.3"